# serial-toolbox

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: cli.rst  conf.py  connect.rst  gui.rst  index.rst  installation.md  interface_core.rst  log_init.rst  readme_link.md  usage.md
docs/source/api/: connect.rst  interface_core.rst  log_init.rst  models.rst  ui.rst
docs/source/modules/: connect.rst  interface_core.rst  log_init.rst  models.rst
serial_toolbox/: __init__.py  cli.py  connect.py  gui.py  interface_core.py  log_init.py  models.py  ui.py
serial_toolbox/config/: config.yaml
serial_util/: connect.py  gui.py  interface.py  interface_core.py  log_init.py
