[tool.poetry]
name = "serial_toolbox"
version = "0.1.5"
description = "Utility functions for pySerial"
authors = ["Takuya Sasatani <33111879+t-sasatani@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
pyserial = "^3.5"
coloredlogs = "^15.0.1"
myst-parser = "^2.0.0"
matplotlib = "^3.8.4"
click = "^8.1.7"
pyreadline3 = "^3.4.1"
prompt-toolkit = "^3.0.47"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sertool = "serial_toolbox.gui:serial_monitor"